--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 }
 
 div{
-	padding-top: 50px !important;
+	padding-top: 40px !important;
 }
 
 /*
@@ -33,21 +33,28 @@ h1, h2, h3, h4, h5, h6, p {
 */
 
 nav {
-	position: fixed;
-	width: 100%;
-	height: 50px;
 	background-color: rgba(179,27,27,.65);
-	z-index: 99;
+	display: inline-block;
+	height: 50px;
+	position: fixed;
 	text-align: center;
+	width: 100%;
+	z-index: 99;
+}
+
+nav ul {
+	/*Remove any unnecessary padding*/
+	padding: 0px;
+
 }
 
 nav ul li{
-	float: left;
+	/*float: left;*/
 	display: inline-block;
 	list-style: none;
 }
 
-nav a {
+nav ul li a {
 	text-decoration: none;
 	color: rgb(202,210,197);
 	margin-left: 50px;
@@ -81,29 +88,29 @@ nav a {
 	background-image: url("../images/origami.jpg");
 }
 
-/*CT:https://i.ytimg.com/vi/ugQXCZm2weE/maxresdefault.jpg*/
+/*CT:https://i.ytimg.com/vi/XuAAooA56V4/maxresdefault.jpg*/
 .sectC {
-	background-image: url("../images/glassbeach.jpg");
+	background-image: url("../images/glass.jpg");
 }
 
 
 /* Style the links inside the list items */
-ul.topnav a {
+/*ul.topnav a {
   display: inline-block;
   text-align: center;
   padding: 0px 0px;
   text-decoration: none;
   transition: 1.3s;
-}
+}*/
 
 /* Change background color of links on hover */
-ul.topnav a:hover {
+/*ul.topnav a:hover {
 	background-color: #878472;
 	color: black;
-}
+}*/
 
 /* Hide the list item that contains the link that should open and close the topnav on small screens */
-ul.topnav li.icon {
+/*ul.topnav li.icon {
 	display: none;
-}
+}*/
 
