--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 nav {
-	background-color: rgba(179,27,27,.65);
+	background-color: rgba(142, 22, 22, .8);
 	display: inline-block;
 	height: 50px;
 /*	overflow: hidden;*/
@@ -76,8 +76,15 @@ nav a {
 
 }
 
+div img
+{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .sect {
-	color: rgb(202,210,197);
+	color: rgb(255,255,255);
 	height: 100%;
 	/*background-color: rgb(53,79,82); <-- not actually needed
 	whole image covers the div*/
@@ -86,14 +93,37 @@ nav a {
 	background-attachment: fixed;
 }
 
+#CCCmast {
+	text-align: center;
+	color: rgb(179,34,37);
+	margin-top: 200px;
+	margin-bottom: 200px;
+	font-size: 7em;
+    text-shadow: 0 0 6px #FFFFFF;
+}
+
+#CallToAction {
+	font-size: 3em;
+}
+
+.sect p {
+	text-align: center;
+	margin-left: 5%;
+	margin-right: 5%;
+}
+.subSection p {
+	margin-left: 5%;
+	margin-right: 5%;
+}
+
 .subSection {
 	height: 60%;
 	background-color: rgb(202,210,197);
 }
 
-/*CT: http://cdn.pcwallart.com/images/golden-gate-bridge-silhouette-wallpaper-2.jpg*/
+/*CT: https://upload.wikimedia.org/wikipedia/commons/4/40/Cornell_University_arts_quad.JPG*/
 .sectA {
-	background-image: url("../images/GGBridge.jpg");
+	background-image: url("../images/artsquad.jpg");
 }
 
 /*CT: http://kabegami.org/wp-content/uploads/2016/07/0mmRo9a1.jpg*/
