--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 
 div{
 	padding-top: 40px !important;
+	overflow: scroll;
 }
 
 /*
@@ -46,7 +47,7 @@ nav {
 	background-color: rgba(142, 22, 22, .8);
 	display: inline-block;
 	height: 50px;
-/*	overflow: hidden;*/
+	/*overflow: scroll;*/
 	position: fixed;
 	text-align: center;
 	width: 100%;
@@ -86,7 +87,7 @@ div img
 
 .sect {
 	color: rgb(255,255,255);
-  text-shadow: 0 0 2px #000000;
+  	/*text-shadow: 0 0 2px #000000;*/
 	height: 100%;
 	/*background-color: rgb(53,79,82); <-- not actually needed
 	whole image covers the div*/
@@ -99,9 +100,9 @@ div img
 	text-align: center;
 	color: rgb(179,34,37);
 	margin-top: 200px;
-	margin-bottom: 200px;
+	margin-bottom: 180px;
 	font-size: 7em;
-  text-shadow: 0 0 6px #FFFFFF;
+  	text-shadow: 0 0 1px #FFFFFF;
 }
 
 #CallToAction {
@@ -119,7 +120,7 @@ div img
 }
 
 .subSection {
-	height: 60%;
+	height: 70%;
 	background-color: rgb(202,210,197);
 }
 
@@ -150,6 +151,21 @@ div img
 		padding: 0px;
 		display: none;
 	}
+
+	#CallToAction{
+		display: none;
+	}
+
+	.sect{
+		height: 100%;
+		width: 100%;
+	}
+
+	.subSection{
+		height: 100%;
+		width: 100%;
+	}
+
 
 /*	h1.logo{
 		margin: auto;
