--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,7 @@ div img
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
+	padding: 0px;
 }
 
 #CCCmast {
@@ -158,7 +159,8 @@ div img
 	}
 
 	#CallToAction{
-		display: none;
+		width: 25%%;
+		display: block;
 	}
 
 	.sect{
@@ -170,16 +172,6 @@ div img
 		height: 100%;
 		width: 100%;
 	}
-
-
-/*	h1.logo{
-		margin: auto;
-		float: none;
-	}
-*/
-/*	header nav ul li{
-		width: 18%;
-	}*/
 
 }
 
