--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,6 @@ div img
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	margin-bottom: 75px;
 }
 
 .sect {
@@ -159,6 +158,15 @@ div img
 .carousel-caption {
     top: 0;
     bottom: auto;
+}
+
+/*Make Carousel Full div*/
+.carousel-inner>.item>img, .carousel-inner>.item>a>img {
+display: block;
+height: auto;
+max-width: 100%;
+line-height: 1;
+width: 100%;
 }
 
 @media screen and (max-width: 768px){
