--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,17 @@ div img
     bottom: auto;
 }
 
+/* Team Section Columns */
+.column-left{
+	float: left; width: 33%; text-align: left;
+}
+.column-right{
+	float: right; width: 33%; text-align: left;
+}
+.column-center{
+	display: inline-block; width: 33%; text-align: left;
+}
+
 /*Make Carousel Full div*/
 .carousel-inner>.item>img, .carousel-inner>.item>a>img {
 display: block;
