--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,7 @@ div img
 
 #contactSect {
 	height: 40%;
+	color: white;
 }
 /*CT: https://upload.wikimedia.org/wikipedia/commons/4/40/Cornell_University_arts_quad.JPG*/
 .sectA {
@@ -179,6 +180,12 @@ max-width: 100%;
 line-height: 1;
 width: 100%;
 }
+
+.btn-envelope{color:#8E1616;background-color:#ffffff;border-color:rgba(0,0,0,0.2)}.btn-envelope:focus,.btn-envelope.focus{color:#fff;background-color:#2d4373;border-color:rgba(0,0,0,0.2)}
+.btn-envelope:hover{color:#8E1616;background-color:#bbbbbb;border-color:rgba(0,0,0,0.2)}
+.btn-envelope:active,.btn-envelope.active,.open>.dropdown-toggle.btn-envelope{color:#fff;background-color:#2d4373;border-color:rgba(0,0,0,0.2)}.btn-envelope:active:hover,.btn-envelope.active:hover,.open>.dropdown-toggle.btn-envelope:hover,.btn-envelope:active:focus,.btn-envelope.active:focus,.open>.dropdown-toggle.btn-envelope:focus,.btn-envelope:active.focus,.btn-envelope.active.focus,.open>.dropdown-toggle.btn-envelope.focus{color:#fff;background-color:#23345a;border-color:rgba(0,0,0,0.2)}
+.btn-envelope:active,.btn-envelope.active,.open>.dropdown-toggle.btn-envelope{background-image:none}
+.btn-envelope.disabled,.btn-envelope[disabled],fieldset[disabled] .btn-envelope,.btn-envelope.disabled:hover,.btn-envelope[disabled]:hover,fieldset[disabled] .btn-envelope:hover,.btn-envelope.disabled:focus,.btn-envelope[disabled]:focus,fieldset[disabled] .btn-envelope:focus,.btn-envelope.disabled.focus,.btn-envelope[disabled].focus,fieldset[disabled] .btn-envelope.focus,.btn-envelope.disabled:active,.btn-envelope[disabled]:active,fieldset[disabled] .btn-envelope:active,.btn-envelope.disabled.active,.btn-envelope[disabled].active,fieldset[disabled] .btn-envelope.active{background-color:#3b5998;border-color:rgba(0,0,0,0.2)}
 
 @media screen and (max-width: 768px){
 	
