--- a/css/style.css
+++ b/css/style.css
@@ -105,12 +105,17 @@ div img
 
 .sect {
 	color: rgb(255,255,255);
-	height: 100%;
+	min-height: 60%;
+	max-height: 100%;
+	width: 100%;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	padding: 0px;
 }
+
+	.sect{
+	}
 
 #CCCmast {
 	font-size: 312%;
@@ -139,7 +144,8 @@ div img
 
 
 .subSection {
-	height: 70%;
+	/*height: 70%;*/
+	min-height: 60%;
 	background-color: rgb(202,210,197);
 }
 
@@ -238,11 +244,6 @@ width: 100%;
 
 	#CallToAction{
 		font-size: 130%;
-	}
-
-	.sect{
-		height: 100%;
-		width: 100%;
 	}
 
 	.subSection{
