Fixed carousel height?

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6238,7 +6238,7 @@ button.close {
   position: relative;
 }
 .carousel-inner {
-  position: relative;
+  position: absolute;
   width: 100%;
   overflow: hidden;
 }
