--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,8 @@ div{
 	display: block;
 	overflow: auto;
 }
-
-div > #newSect{
-	display: block;
-	overflow: auto;
+div > #newsSect{
+	overflow-y: hidden;
 }
 
 div > a{
@@ -90,6 +88,7 @@ nav {
 	width: 100%;
 	display: inline-block;
 }
+
 .headerButton {
 	color:white;
 }
@@ -112,12 +111,6 @@ nav {
 	  float: none;
 	  display: inline-block;
 	}
-@media screen and (max-width: 768px){
-	.navbar-nav li {
-	  float: none;
-	  display: inline;
-	}
-}
 
 .navbar-toggle {
     border: none;
@@ -167,7 +160,7 @@ div img
 .btn-square{
 	color: white;
     border: none;
-    padding: 10px 32px;
+    padding: 10px 115px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -184,14 +177,21 @@ div img
     font-size: 16px;
 }
 
-.btn-square-social{
-	color: white;
+.TeamButton {
+	/* -webkit-border-radius: 15px; */
+    background-color: rgb(142, 22, 22); /* Red */
+    color: white;
     border: none;
-    padding: 10px 25px;
+    padding: 20px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+}
+
+.TeamButton:hover {
+    background-color: #7a1919; /* Red */
+    color: #eadada;
 }
 
 .table{
@@ -297,31 +297,15 @@ div img
 	padding: 20px;
 }
 
-.TeamButton {
-	/* -webkit-border-radius: 15px; */
-    background-color: rgb(142, 22, 22); /* Red */
-    color: white;
-    border: none;
-    padding: 20px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-}
-
-.TeamButton:hover {
-    background-color: #7a1919; /* Red */
-    color: #eadada;
-}
-
 
 /*Make Carousel Full div*/
 .carousel-inner>.item>img, .carousel-inner>.item>a>img {
-display: block;
-height: auto;
-max-width: 100%;
-line-height: 1;
-width: 100%;
+	display: block;
+	height: auto;
+	overflow: hidden;
+	max-width: 100%;
+	line-height: 1;
+	width: 100%;
 
 }
 
@@ -368,16 +352,24 @@ width: 100%;
 		width: 100%;
 	}
 
-	.sect{
-		overflow: auto;
-		display: block;
-	}
-
 	.br-left{
 		display: block;
 		line-height: 0px;
 	}
+	.navbar-nav li {
+	  float: none;
+	  display: inline;
+	}
+	
+	.carousel-inner>.item>img, .carousel-inner>.item>a>img {
+		display: block;
+		height: 350px;
+		overflow: hidden;
+		max-width: 100%;
+		line-height: 1;
+		width: 100%;
 
+	}
 }
 
 @media screen and (max-width: 480px){
@@ -392,6 +384,13 @@ width: 100%;
 }
 
 @media screen and (min-width: 769px){
-
+	.carousel-inner>.item>img, .carousel-inner>.item>a>img {
+		display: block;
+		height: 670px;
+		overflow: hidden;
+		max-width: 100%;
+		line-height: 1;
+		width: 100%;
+	}
 }
 
