--- a/css/style.css
+++ b/css/style.css
@@ -315,7 +315,7 @@ div img
 }
 /*CT: https://upload.wikimedia.org/wikipedia/commons/4/40/Cornell_University_arts_quad.JPG*/
 .sectA {
-	background: url("../images/arts_quad_cropped.jpg") no-repeat center center fixed;
+	background: url("../images/artsquad2.jpg") no-repeat center center fixed;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
